recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:7: error: not found: value stpes
    stpes -= 1
    ^